data/work/traefik-gateway-tls/support/argocd/resources/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder-route
  namespace: coder
spec:
  parentRefs:
  - name: traefik
    namespace: traefik
  hostnames:
  - "coder.feed.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: coder
      port: 80 
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring 
spec:
  parentRefs:
  - name: traefik
    namespace: traefik
  hostnames:
  - "grafana.feed.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana 
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-route
  namespace: headlamp
spec:
  parentRefs:
  - name: traefik
    namespace: traefik
  hostnames:
  - "headlamp.feed.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: headlamp
      port: 80
